src/main.css
:root {
  --border-color: #ccc;
  --panel-header-height: 32px;
}

*,
*:before,
*:after {
  box-sizing: border-box;
}

html,
body {
  margin: 0;
  font-family: monospace;
  height: 100%;
}

.root-layout {
  display: grid;
  grid-template-columns: auto 1fr;
  height: 100%;
}

.inner-layout {
  display: grid;
  grid-template-columns: 1fr auto;
  height: 100%;
}

.artifact-list {
  display: grid;
  overflow-y: auto;
  height: 100%;
  align-content: start;
}

.panel-left,
.panel-center,
.panel-right {
  display: grid;
  grid-template-rows: var(--panel-header-height) 1fr;
  grid-auto-rows: auto;

  > :first-child {
    display: flex;
    align-items: center;
    padding: 0 0.5rem;
    border-bottom: 1px solid var(--border-color);
  }
}

.panel-left {
  border-right: 1px solid var(--border-color);
}

.panel-center {
  min-height: 0;

  & > * {
    margin: 0;
    overflow: auto;
  }
}

.panel-right {
  border-left: 1px solid var(--border-color);
  min-height: 0;
}

.thread {
  overflow-y: auto;
  scrollbar-gutter: stable;
  padding: 1rem;
  word-break: break-word;

  ul {
    /* layout */
    padding: 0;
    display: grid;
    gap: 16px;

    /* style */
    list-style: none;
  }

  .role {
    font-weight: 600;
  }
}

.player__iframe {
  width: 100%;
  height: 100%;
  border: none;
  display: block;
}

.resizer {
  height: 1rem;
}

.straddle {
  justify-content: space-between;
}

.thumbnail-grid {
  display: flex;
  flex-wrap: wrap;
  gap: 4px;
}

.thumbnail-grid__item {
  height: 32px;
  width: 40px;
}

.thumbnail {
  height: 100%;
  width: 100%;
  object-fit: cover;
}

.thumbnail-button {
  padding: 0;
}

/* utils */
[data-resize="horizontal"] {
  resize: horizontal;
  overflow: auto;
}
[data-resize="vertical"] {
  resize: vertical;
  overflow: auto;
}
[data-resize="none"] {
  resize: none;
}

[data-wrap="pre-wrap"] {
  white-space: pre-wrap;
  word-break: break-word;
}

[data-active-tab="false"] {
  display: none;
}

[data-hidden="true"] {
  display: none;
}

